Implementing Security Policies/Dynamic-custom-admission-controller/Kyverno/Manifests/5. Restrict Image Registries/allowed-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-registries
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-image-registry
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Only images from approved registries (docker.io, ECR, ACR, GCR) are allowed"
      pattern:
        spec:
          containers:
          - image: "docker.io/* | *.dkr.ecr.*.amazonaws.com/* | *.azurecr.io/* | *.gcr.io/* | gcr.io/*"
